@@ -1,6 +1,8 @@
 c - crash     b - bug fix    e - enhancement    f - new feature  n - note
 
 2.4.9
+  b - Bugzilla bug 57. Check return value of malloc for tracejob for Linux
+      (Chris Samuel - VPAC)
 
 2.4.8
   e - Bugzilla bug 22. HIGH_PRECISION_FAIRSHARE for fifo scheduling.
